--- a/www/templates/manage_book_edit.html
+++ b/www/templates/manage_book_edit.html
@@ -97,7 +97,7 @@ $(function () {
             </div>
             <div class="uk-form-row">
                 <button type="submit" class="uk-button uk-button-primary"><i class="uk-icon-save"></i> Publish</button>
-                <a href="/manage/readings" class="uk-button"><i class="uk-icon-times"></i> Cancel</a>
+                <a href="/manage/books" class="uk-button"><i class="uk-icon-times"></i> Cancel</a>
             </div>
         </form>
     </div>
